# gars

./: Cargo.toml  README.md
examples/cleaning_robot/: Cargo.toml  README.md
examples/cleaning_robot/src/: ga.rs  genome.rs  grid.rs  main.rs  simulation.rs  tui.rs
examples/snek/: Cargo.toml  README.md
examples/snek/src/: ga.rs  genome.rs  main.rs  simulation.rs  tui.rs
src/: engine.rs  ga.rs  lib.rs  observer.rs
